--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-validation": "^3.0.7",
+    "reactstrap": "^8.5.1",
     "validator": "^13.1.1"
   },
   "scripts": {
